samples/_failures_safe/1761149102_cf3e3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9aaa284.c: In function ‘main’:
./samples/SAFE/__tmp_e9aaa284.c:160:17: error: expected expression at end of input
  160 |                 print_matrix(&result,
      |                 ^~~~~~~~~~~~
./samples/SAFE/__tmp_e9aaa284.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9aaa284.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9aaa284.c:160:17: error: expected declaration or statement at end of input
